Removed script tag, html id and JavaScript function
FNB Academy super hero app project

--- a/avenger1.html
+++ b/avenger1.html
@@ -22,14 +22,14 @@
        <b>Alignment:</b> Good<br><br>
         <b>Race:</b> Asgardian<br><br>
 
-        <p id="percent">70%</p>
+        <p>70%</p>
 
         </p>
 
         <br>
 
         <h2>Power Stats</h2>
-            <a onclick="perCentage()" href="#">A</a>
+            <a href="#">A</a>
         <p >
             <b>Intelligence:</b><p > 70% </p><br><br>
             <b>Streanth:</b> 100%<br><br>
@@ -38,12 +38,5 @@
             <b>Combat:</b> 100%
         </p>
     </section>
-    <script>
-        function perCentage(){
-
-            document.getElementById('percent').innerHTML = "SEVENTY PERCENT" ;
-
-        }
-    </script>
 </body>
 </html>
