removed p tag, a tag , img tag and html and added z-index of 999 on css
FNB Academy Super_Hero_App project

--- a/avenger1.html
+++ b/avenger1.html
@@ -22,16 +22,15 @@
        <b>Alignment:</b> Good<br><br>
         <b>Race:</b> Asgardian<br><br>
 
-        <p>70%</p>
 
         </p>
 
         <br>
 
         <h2>Power Stats</h2>
-            <a href="#">A</a>
+    
         <p >
-            <b>Intelligence:</b><p > 70% </p><br><br>
+            <b>Intelligence:</b>70% br><br>
             <b>Streanth:</b> 100%<br><br>
             <b>Speed:</b> 92%<br><br>
             <b>Power:</b> 100%<br><br>
