Added < on br tag
FNB Academy Super_Hero_App project

--- a/avenger1.html
+++ b/avenger1.html
@@ -30,7 +30,7 @@
         <h2>Power Stats</h2>
     
         <p >
-            <b>Intelligence:</b>70% br><br>
+            <b>Intelligence:</b>70% <br><br>
             <b>Streanth:</b> 100%<br><br>
             <b>Speed:</b> 92%<br><br>
             <b>Power:</b> 100%<br><br>
