--- a/about_us.html
+++ b/about_us.html
@@ -11,7 +11,7 @@
         <a class="font" href="index.html">Home</a>
         <a class="font"  href="about_us.html">About Us</a>
         <a class="font"  href="contacts.html">Contacts</a>
-    </nav>
+    </nav><br><br><br><br>
     <h1>About As</h1>
     <br>
     <p>
